# AI-Guide

./: .gitignore  ARCHITECTURE.docx  ARCHITECTURE.md  CLAUDE.md  CONTINUE.md  E2E_REGIONS.md  MODEL_COMPARISON.md
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
backend/app/: config.py  main.py
backend/app/services/agent/: companion.py  factory.py  languages.py  name_localizer.py  narrator.py  orchestrator.py  pipeline.py  planner.py  prompts.py  scorer.py  significance.py
backend/app/services/enrichment/: enricher.py
backend/app/services/geo/: categories.py  discovery.py  geocoder.py  inventory.py  providers.py  ranking.py
backend/app/services/llm/: client.py  router.py
backend/app/services/state/: store.py
backend/app/services/stt/: stt.py
backend/app/shared/: geo_math.py  schemas.py
backend/prompts/: area.txt  companion.txt  core.txt  narrator.txt  planner.txt  scorer.txt
backend/sim/: e2e_regions.py  eval_live.py  routes.py  run_agent.py  run_geo.py  run_orchestrator.py  smoke_cache.py  smoke_openrouter.py  smoke_stt.py  walk.py
backend/tests/: test_agent_pipeline.py  test_enricher.py  test_geo_math.py  test_geocoder.py  test_health.py  test_inventory.py  test_languages.py  test_llm_live.py  test_name_localizer.py  test_observability.py  test_orchestrator.py  test_ranking.py  test_schemas.py  test_security.py  test_sim_and_discovery.py  test_store.py  test_stt_live.py  test_ws.py
backend/tests/fixtures/: facts_red_square.json  places_red_square.json
backend/web/: index.html
(+43 files in other folders)
